--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,6 +54,10 @@ steps:
   inputs:
     pollingTimeoutSec: '300'
 
+- task: TfxInstaller@1
+  inputs:
+    version: 'v0.6.x'
+
 - task: PackageAzureDevOpsExtension@2
   displayName: 'Package Extension: src/WorkItemMigrator.Extension'
   inputs:
